--- a/src/Benchmarks/Amicitia.IO.Benchmarks.BitReaderBenchmarks/Amicitia.IO.Benchmarks.BitReaderBenchmarks.csproj
+++ b/src/Benchmarks/Amicitia.IO.Benchmarks.BitReaderBenchmarks/Amicitia.IO.Benchmarks.BitReaderBenchmarks.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Amicitia.IO\Amicitia.IO.csproj" />
+    <ProjectReference Include="..\..\Amicitia.IO\Amicitia.IO.csproj" />
   </ItemGroup>
 
 </Project>
