--- a/src/Benchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks.csproj
+++ b/src/Benchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Amicitia.IO\Amicitia.IO.csproj" />
+    <ProjectReference Include="..\..\Amicitia.IO\Amicitia.IO.csproj" />
   </ItemGroup>
 
 </Project>
