--- a/src/Amicitia.IO/Amicitia.IO.csproj
+++ b/src/Amicitia.IO/Amicitia.IO.csproj
@@ -1,13 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net48</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.0" />
   </ItemGroup>
+
+  <Target Name="netstandard21" Condition="'$(TargetFramework)' == 'netstandard2.1'" />
+  <Target Name="net48" Condition="'$(TargetFramework)' == 'net48'" />
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+    <DefineConstants>$(DefineConstants);FEATURE_SPAN,FEATURE_RECURSIVE_MATCH,FEATURE_DEFAULT_INTERFACE_IMPLEMENTATION</DefineConstants>
+  </PropertyGroup>
 
 </Project>
