--- a/src/Amicitia.IO/Amicitia.IO.csproj
+++ b/src/Amicitia.IO/Amicitia.IO.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <Target Name="netstandard21" Condition="'$(TargetFramework)' == 'netstandard2.1'" />
-  <Target Name="net48" Condition="'$(TargetFramework)' == 'net48'" />
+  <Target Name="netstandard20" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <DefineConstants>$(DefineConstants);FEATURE_SPAN,FEATURE_RECURSIVE_MATCH,FEATURE_DEFAULT_INTERFACE_IMPLEMENTATION</DefineConstants>
