--- a/src/Benchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks.csproj
+++ b/src/Benchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks/Amicitia.IO.Benchmarks.CachedBlockBufferedStreamBenchmarks.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Amicitia.IO\Amicitia.IO.csproj" />
   </ItemGroup>
 
