--- a/src/Amicitia.IO/Amicitia.IO.csproj
+++ b/src/Amicitia.IO/Amicitia.IO.csproj
@@ -6,13 +6,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.12.0" ExcludeAssets="all"/>
+    <None Include="..\..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.0" ExcludeAssets="all" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.0" />
   </ItemGroup>
 
   <Target Name="netstandard21" Condition="'$(TargetFramework)' == 'netstandard2.1'" />
   <Target Name="netstandard20" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+
+    <PropertyGroup>
+        <VersionPrefix>1.2.0</VersionPrefix>
+        <PackageProjectUrl>https://github.com/tge-was-taken/Amicitia.IO</PackageProjectUrl>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <DefineConstants>$(DefineConstants);FEATURE_SPAN,FEATURE_RECURSIVE_MATCH,FEATURE_DEFAULT_INTERFACE_IMPLEMENTATION</DefineConstants>
